Vérification de l'absence du champ jpegPhoto Mise en forme du code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 2.8)
 
 project(ldapjpeg)
-#set(EXECUTABLE_OUTPUT_PATH bin)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMakeModules")
 find_package(PkgConfig REQUIRED)
@@ -16,6 +17,9 @@ add_definitions(${DBUS_CFLAGS_OTHER})
 
 find_package(Ldap REQUIRED)
 include_directories(${LDAP_INCLUDE_DIRS})
+
+add_definitions(-DLDAP_SERVER="ldap://server.lan")
+add_definitions(-DUSER_BASE="cn=users,dc=server,dc=lan")
 
 add_executable(getldapjpeg
 	src/main.c
